# ao-dev

./: .gitignore  .gitmodules  CLAUDE.md  README.md  ao-dev  dev.sh  preview_v2.html  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-test-environment/: action.yaml
.github/workflows/: billable-tests.yaml  docs.yaml  tests.yaml
docker/: docker-compose.prod.yaml  docker-compose.yaml  frontend.Dockerfile  frontend.nginx.conf  host-nginx-agops-project.conf
docs/: CNAME  index.md  mkdocs.yaml  onboarding-agent-spec.md
docs/api-reference/: cli.md  index.md
docs/assets/stylesheets/: custom.css
docs/developer-guide/: ao-tool.md  api-patching.md  architecture.md  edge-detection.md  installation.md  priors-implementation-plan.md  priors-integration.md  server.md  so-tool.md  testing.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/release/: VSIX_DESC.md
docs/user-guide/: claude-code.md  cli-commands.md  subruns.md  vscode-extension.md
example_workflows/: README.md
example_workflows/chess_text2sql/: README.md
example_workflows/debug_examples/anthropic/: debate.py  image_tool_call.py  pyproject.toml
example_workflows/debug_examples/claude_sdk/: agent_sdk.py
example_workflows/debug_examples/crewai/: advanced_tools.py  multi_tool.py  pyproject.toml
example_workflows/debug_examples/google/: pyproject.toml
example_workflows/debug_examples/langchain/: pyproject.toml
example_workflows/debug_examples/mcp/: pyproject.toml
example_workflows/debug_examples/nova/: README.md  debate.py  pyproject.toml
example_workflows/debug_examples/ollama/: debate.py  native_debate.py  pyproject.toml
example_workflows/debug_examples/openai/: debate.py  inject_lessons.py  inject_priors.py  pyproject.toml
example_workflows/debug_examples/prettify_fixture/: __init__.py  inject_prettify_run.py  prettify_fixture.py  pyproject.toml
example_workflows/debug_examples/subruns/: multiple_runs_asyncio.py  multiple_runs_sequential.py  multiple_runs_threading.py  pyproject.toml
example_workflows/debug_examples/together/: pyproject.toml
example_workflows/debug_examples/user_files/: example.xlsx
example_workflows/debug_examples/vllm/: debate.py  pyproject.toml
example_workflows/debug_examples/xai/: README.md  debate.py  pyproject.toml
example_workflows/miroflow_deep_research/: README.md  pyproject.toml  test_serper.py  test_serper_mcp.py  test_subset.py
example_workflows/miroflow_deep_research/.ao/: .project_id
example_workflows/miroflow_deep_research/.sovara/: .project_id
src/: README.md
src/assets/: SKILL.md
src/cli/: ao_config.py  ao_server.py  ao_tool.py
src/common/: config.py  constants.py  logger.py  project.py  user.py  utils.py
src/graph_analysis/: model_utils.py
src/onboarding/: hooks.py  orchestrator.py  prompts.py
src/runner/: README.md  agent_runner.py  context_manager.py  lessons.py  string_matching.py
src/runner/monkey_patching/: api_parser.py  apply_monkey_patches.py  patching_utils.py
src/server/: README.md  app.py  database_manager.py  file_watcher.py  main_server.py  state.py
src/server/database_backends/: sqlite.py
src/server/routes/: ui.py  (+2 more)
src/sovara/: __init__.py
src/user_interfaces/: README.md  package-lock.json  package.json  user-interface.code-workspace
tests/: README.md  conftest.py  test_graph_payloads.py  test_onboarding_hooks.py  utils.py
tests/billable/: caching_utils.py  conftest.py  test_caching.py  test_edits.py
tests/non_billable/: test_bedrock_support.py  test_cli_routes.py  test_concurrency.py  test_custom_metrics.py  test_inference_server_process.py  test_internal_llm_bridge.py  test_llm_backend_settings.py  test_llm_call_schema.py  test_load.py  test_model_display_names.py  test_optional_dependencies.py  test_prior_validator.py  test_priors_backend_crud.py  test_priors_backend_retrieval.py  test_priors_backend_server.py  test_priors_client.py  test_priors_pipeline.py  test_priors_requests.py  test_priors_runtime.py  test_run_filters.py  test_runner_user_notifications.py  test_server_activity.py  test_skill_install.py  test_so_server_cli.py  test_so_server_logs.py  test_tags.py  test_trace_chat_errors.py  test_trace_chat_main.py  test_trace_chat_rendering.py  test_ui_orphan_sessions.py  test_ui_priors_proxy.py  test_ui_route_errors.py  test_ui_user_refresh.py  test_user_setup_notifications.py  test_version_timestamps.py
ui/: README.md  package-lock.json  package.json
ui/shared_components/: package.json
ui/vscode_extension/: .vscodeignore  README.md  build-vsix.sh  generate_random_graph.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
ui/web_app/: README.md  index.html  package-lock.json  tsconfig.app.json  vite.config.ts
(+390 files in other folders)
