# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ao.assets" = ["SKILL.md"]

[tool.setuptools]
# Map ao package to src directory with subpackages
package-dir = {"ao" = "src"}
packages = [
    "ao",
    "ao.assets",
    "ao.cli",
    "ao.common",
    "ao.runner",
    "ao.runner.monkey_patching",
    "ao.runner.monkey_patching.api_parsers",
    "ao.runner.monkey_patching.patches",
    "ao.server",
    "ao.server.database_backends",
    "ao.server.handlers",
    "ao.server.routes"
]

[project.scripts]
# Console commands for the ao package
ao-record = "ao.cli.ao_record:main"
ao-config = "ao.cli.ao_config:main"
ao-server = "ao.cli.ao_server:main"
ao-tool = "ao.cli.ao_tool:main"

# Aliases for quick access
record = "ao.cli.ao_record:main"
server = "ao.cli.ao_server:main"
tool = "ao.cli.ao_tool:main"

[tool.black]
line-length = 100

[project]
name = "ao-dev"
version = "0.1.5"
description = "A development tool for LLM call visualization and debugging"
readme = "docs/release/PYPI_DESC.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
    "dill",
    "debugpy",
    "psutil",
    "psycopg2-binary",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "flatten_dict",
    "flatten_json"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "pytest",
    "pre-commit",
    "responses",
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai",
    "hydra-core",
    "e2b_code_interpreter",
    "together",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "websocket-client"
]

examples = [
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai"
]

docs = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin",
    "mkdocstrings[python]>=0.24",
]
