# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"sovara.assets" = ["SKILL.md"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sovara*"]

[project.scripts]
# Console commands for the Sovara package
so-record = "sovara.cli.so_record:main"
so-config = "sovara.cli.so_config:main"
so-server = "sovara.cli.so_server:main"
so-tool = "sovara.cli.so_tool:main"

[tool.black]
line-length = 100

[project]
name = "sovara"
version = "0.2.0"
description = "A development tool for LLM call visualization and debugging"
readme = "docs/release/PYPI_DESC.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
    "dill",
    "debugpy",
    "psutil",
    "psycopg2-binary",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "flatten_dict",
    "flatten_json"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "pytest",
    "pre-commit",
    "responses",
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai",
    "hydra-core",
    "e2b_code_interpreter",
    "together",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "websocket-client"
]

examples = [
    "openai",
    "anthropic",
    "openai-agents",
    "google-genai"
]

docs = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin",
    "mkdocstrings[python]>=0.24",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3\\.17:DeprecationWarning:google\\.genai\\.types",
]
