[project]
name = "miroflow-example"
version = "0.1.0"
description = "Example workflow using MiroFlow with AO visualization"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "miroflow>=0.1.0",
    "miroflow-contrib>=0.1.0",
    "miroflow-tool>=0.1.0",
    "python-dotenv>=1.0.0",
    "ao-dev>=0.0.3",
]

[tool.uv.sources]
# Local editable sources for miroflow libs
miroflow = { path = "MiroFlow/libs/miroflow", editable = true }
miroflow-contrib = { path = "MiroFlow/libs/miroflow-contrib", editable = true }
miroflow-tool = { path = "MiroFlow/libs/miroflow-tool", editable = true }
# Local editable source for ao-dev (relative to this file)
ao-dev = { path = "../..", editable = true }
