[project]
name = "sovara-examples-langchain"
version = "0.1.0"
description = "Sovara debug examples for LangChain"
requires-python = ">=3.10"
dependencies = [
    "sovara",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
]

[tool.uv.sources]
sovara = { path = "../../..", editable = true }
